# llm-voice

./: .env.example  .gitignore  LICENSE  README.md  home_assistant_logs.txt  pyproject.toml
.github/workflows/: python-app.yml
examples/: README.md  speak_fast.py  speak_normal.py
llm_voice/: audio_devices.py  computer_voice_responder.py  env.py  main.py  mp3_file.py
llm_voice/clients/: apple_say_text_to_speech_client.py  eleven_labs_text_to_speech_client.py  google_cloud_text_to_speech_client.py  google_text_to_speech_client.py  llm_client.py  ollama_client.py  openai_client.py  openai_text_to_speech_client.py  spotify_client.py
llm_voice/errors/: __init__.py  failed_to_understand_listener_error.py  invalid_log_level_error.py  listener_error.py  listener_fatal_error.py  no_input_listener_error.py  respond_error.py
llm_voice/interfaces/: __init__.py  audio_device.py  basic_command.py  listener.py  pyaudio_device_info.py  responder.py  singleton_command.py
llm_voice/llm/: base.py  ollama_client.py  openai_client.py
llm_voice/responder/: responder.py  voice_responder_fast.py  voice_responder_normal.py
llm_voice/tts/: apple_say_text_to_speech_client.py  base.py  eleven_labs_text_to_speech_client.py  google_cloud_text_to_speech_client.py  google_text_to_speech_client.py  openai_text_to_speech_client.py
llm_voice/utils/: logger.py
