[tool.poetry]
name = "llm-voice"
version = "0.1.0"
description = ""
authors = ["Jake Cyr <cyrjake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.2.1"
gtts = "^2.4.0"
google-cloud-texttospeech = "^2.14.2"
python-dotenv = "^1.0.0"
pyaudio = "^0.2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
